--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -184,7 +184,15 @@ jobs:
 
         sudo apt-get install -y \
           libc-dev-bin \
-          libc6-dev git \
+          libc6-dev git \ shell: powershell
+312
+        run: |
+313
+          New-Item -ItemType Directory -Force -Path .\build32
+314
+          cd .\build32
+315
+          cmake -G "${{
           build-essential \
           checkinstall \
           libcurl4-openssl-dev \
@@ -336,7 +344,7 @@ jobs:
         run: |
           New-Item -ItemType Directory -Force -Path .\build64
           cd .\build64
-          cmake -G "${{ env.CMAKE_GENERATOR }}" -A x64 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc${{ WINDOWS_DEPS_VERSION }}_64" -DDepsPath="${{ github.workspace }}\cmbuild\deps\win64" -DBUILD_CAPTIONS=YES -DCOPIED_DEPENDENCIES=NO -DCOPY_DEPENDENCIES=YES ..
+          cmake -G "${{ env.CMAKE_GENERATOR }}" -A x64 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc${{ env.WINDOWS_DEPS_VERSION }}_64" -DDepsPath="${{ github.workspace }}\cmbuild\deps\win64" -DBUILD_CAPTIONS=YES -DCOPIED_DEPENDENCIES=NO -DCOPY_DEPENDENCIES=YES ..
       - name: 'Build OBS-Studio 64-bit'
         if: steps.build-cache-obs-64.outputs.cache-hit != 'true'
         working-directory: ${{ github.workspace }}/obs-studio
