--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -185,14 +185,10 @@ jobs:
         sudo apt-get install -y \
           libc-dev-bin \
           libc6-dev git \ shell: powershell
-312
         run: |
-313
           New-Item -ItemType Directory -Force -Path .\build32
-314
           cd .\build32
-315
-          cmake -G "${{
+          cmake -G "${{ env.CMAKE_GENERATOR }}" \
           build-essential \
           checkinstall \
           libcurl4-openssl-dev \
@@ -320,7 +316,11 @@ jobs:
         run: |
           New-Item -ItemType Directory -Force -Path .\build32
           cd .\build32
-          cmake -G "${{ env.CMAKE_GENERATOR }}" -A Win32 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc${{ env.WINDOWS_DEPS_VERSION }}" -DDepsPath="${{ github.workspace }}\cmbuild\deps\win32" -DBUILD_CAPTIONS=YES -DCOPIED_DEPENDENCIES=NO -DCOPY_DEPENDENCIES=YES ..
+          cmake -G "${{ env.CMAKE_GENERATOR }}" \
+            -A Win32 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" \
+            -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc${{ env.WINDOWS_DEPS_VERSION }}" \
+            -DDepsPath="${{ github.workspace }}\cmbuild\deps\win32" -DBUILD_CAPTIONS=YES \
+            -DCOPIED_DEPENDENCIES=NO -DCOPY_DEPENDENCIES=YES ..
       - name: 'Build OBS-Studio 32-bit'
         if: steps.build-cache-obs-32.outputs.cache-hit != 'true'
         working-directory: ${{ github.workspace }}/obs-studio
