--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -181,14 +181,10 @@ jobs:
 
         sudo add-apt-repository -y ppa:obsproject/obs-studio
         sudo apt-get -qq update
-
+        
         sudo apt-get install -y \
           libc-dev-bin \
-          libc6-dev git \ shell: powershell
-        run: |
-          New-Item -ItemType Directory -Force -Path .\build32
-          cd .\build32
-          cmake -G "${{ env.CMAKE_GENERATOR }}" \
+          libc6-dev git \
           build-essential \
           checkinstall \
           libcurl4-openssl-dev \
@@ -316,10 +312,10 @@ jobs:
         run: |
           New-Item -ItemType Directory -Force -Path .\build32
           cd .\build32
-          cmake -G "${{ env.CMAKE_GENERATOR }}" \
-            -A Win32 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" \
-            -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc${{ env.WINDOWS_DEPS_VERSION }}" \
-            -DDepsPath="${{ github.workspace }}\cmbuild\deps\win32" -DBUILD_CAPTIONS=YES \
+          cmake -G "${{ env.CMAKE_GENERATOR }}" `
+            -A Win32 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" `
+            -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc${{ env.WINDOWS_DEPS_VERSION }}" `
+            -DDepsPath="${{ github.workspace }}\cmbuild\deps\win32" -DBUILD_CAPTIONS=YES `
             -DCOPIED_DEPENDENCIES=NO -DCOPY_DEPENDENCIES=YES ..
       - name: 'Build OBS-Studio 32-bit'
         if: steps.build-cache-obs-32.outputs.cache-hit != 'true'
@@ -344,7 +340,11 @@ jobs:
         run: |
           New-Item -ItemType Directory -Force -Path .\build64
           cd .\build64
-          cmake -G "${{ env.CMAKE_GENERATOR }}" -A x64 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc${{ env.WINDOWS_DEPS_VERSION }}_64" -DDepsPath="${{ github.workspace }}\cmbuild\deps\win64" -DBUILD_CAPTIONS=YES -DCOPIED_DEPENDENCIES=NO -DCOPY_DEPENDENCIES=YES ..
+          cmake -G "${{ env.CMAKE_GENERATOR }}" -A x64 `
+            -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" `
+            -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc${{ env.WINDOWS_DEPS_VERSION }}_64" `
+            -DDepsPath="${{ github.workspace }}\cmbuild\deps\win64" -DBUILD_CAPTIONS=YES -DCOPIED_DEPENDENCIES=NO `
+            -DCOPY_DEPENDENCIES=YES ..
       - name: 'Build OBS-Studio 64-bit'
         if: steps.build-cache-obs-64.outputs.cache-hit != 'true'
         working-directory: ${{ github.workspace }}/obs-studio
